Whitelist /api in app proxy

--- a/trilium-notes/docker-compose.yml
+++ b/trilium-notes/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: trilium-notes_server_1
       APP_PORT: 8080
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
     image: zadam/trilium:0.55.1@sha256:9bf48a49359cd567bb8e9ce87c1d310713ba98ac8d517d75b07b8de907525077
