--- a/trilium-notes/umbrel-app.yml
+++ b/trilium-notes/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: trilium-notes
 category: Productivity
 name: Trilium Notes
-version: "0.55.1"
+version: "0.55.1-build-2"
 tagline: Build your personal knowledge base with Trilium Notes
 description: >-
   Features
