--- a/torq/docker-compose.yml
+++ b/torq/docker-compose.yml
@@ -5,8 +5,9 @@ services:
     environment:
       APP_HOST: $APP_TORQ_IP
       APP_PORT: $APP_TORQ_PORT
+  
   torq:
-    image: "lncapital/torq:0.10.3@sha256:139237316ad898fa4edb36a838ebe96a6e67b0557e8e9afa69872be2d0d0b0c2"
+    image: lncapital/torq:0.10.3@sha256:cacd93adc606f9e1e6740c9402a00caeb9490971b7715b8d1316a66a1af12749
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -33,8 +34,9 @@ services:
     networks:
       default:
         ipv4_address: $APP_TORQ_IP
+  
   torq_db:
-    image: "timescale/timescaledb:2.8.1-pg14@sha256:e622ab1961b37dc54295607311740b434b4a6b2e75580d1e928275b1abab0a9f"
+    image: timescale/timescaledb:2.8.1-pg14@sha256:96c3a5587a24bb336437403b394f5927f639322cf3fcc0eff4ee0294da540dd7
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
