Tidy app manifest

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -6,14 +6,23 @@ version: "v0.10.3"
 tagline: Torq is a capital management tool for routing nodes on the lightning network
 description: >-
   Features
+  
   - Channel and Channel group inspection
+  
   - See the channel balance (inbound/outbound capacity) over time
+  
   - Advanced charts and visualizations of aggregated forwarding statistics
+  
   - Visualization of sources and destinations for traffic
+  
   - Stores all events from your node including HTLC events, fee rate changes and channel enable/disable events
+  
   - Filter, sort and group data
+  
   - Store custom table views configurations for quickly finding the right information
+  
   - Fetch and analyse data from any point in time
+  
   - Navigate through time (days, weeks, months) to track your progress.developer: Shahana and Suheb
 website: https://github.com/lncapital/torq
 dependencies:
@@ -32,3 +41,5 @@ releaseNotes: >-
 path: ""
 defaultUsername: ""
 deterministicPassword: true
+submitter: Max Edwards
+submission: https://github.com/getumbrel/umbrel-apps/pull/269
