--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -3,7 +3,7 @@ id: torq
 category: Lightning Node Management
 name: Torq
 version: "v0.10.3"
-tagline: Torq is a capital management tool for routing nodes on the lightning network
+tagline: Capital management for routing nodes on the lightning network
 description: >-
   Features
   
