Include passwd file so that it works without user 1000 on the host

--- a/torq/docker-compose.yml
+++ b/torq/docker-compose.yml
@@ -39,4 +39,4 @@ services:
       POSTGRES_PASSWORD: moneyprintergobrrr
     volumes:
       - ${APP_DATA_DIR}/data/torq:/var/lib/postgresql/data
-      - /etc/passwd:/etc/passwd:ro #enables postgres to init on user 1000
+      - ${APP_DATA_DIR}/data/passwd:/etc/passwd:ro # Enables postgres to init on user 1000
