Expand the release notes

--- a/lndg/umbrel-app.yml
+++ b/lndg/umbrel-app.yml
@@ -22,6 +22,18 @@ path: ""
 defaultUsername: lndg-admin
 deterministicPassword: true
 releaseNotes: >-
-  https://github.com/cryptosharks131/lndg/releases/tag/v1.4.0
+  - Additional failed HTLC filter by channel id (click on the alias by in/out)
+  
+  - The AP and AF logs can now be filtered by clicking on an alias name
+  
+  - Auto-adjusting AR target (decrease when potential MPP or failure, increase when successful)
+  
+  - Increasing rapid fire amounts and final rapid fire attempts decreasing until amount too small
+  
+  - Dashboard (only) page refresh every 21 min
+  
+  - Record closing costs for all closures (migrated data to closures table)
+  
+  - And more... Full details can be found here: https://github.com/cryptosharks131/lndg/releases/tag/v1.4.0
 submitter: cryptosharks131
 submission: https://github.com/getumbrel/umbrel/pull/1189
