Update nolooking release notes

--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -16,7 +16,16 @@ description: >-
 
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
-  - Allow access to /pj without Umbrel authentication
+  - 0.2.1-alpha (2022-11-22)
+      Fetch quote and lease inbound lightning channel via payjoin output.
+      Automate anchor deposit field (removed). Use rustls.
+      New style with random colors to replace halloween theme.
+
+  - 0.1.0-build-2 (2022-11-15)
+    - Allow access to /pj without Umbrel authentication.
+
+  - 0.1.0 (2022-11-5)
+    - Initial app submission.
 developer: nolooking
 website: https://nolooking.chaincase.app
 dependencies:
