--- a/nolooking/docker-compose.yml
+++ b/nolooking/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_WHITELIST: "/pj"
   
   server:
-    image: satsale/nolooking:0.1.2@sha256:0e26450f6be181d2392bb51b7ecc69446d782d778622e5634c85f54c62a2fdd2
+    image: chaincase/nolooking:v0.2.1-alpha@sha256:3e1c0d32d86762e07074bdf27b117c61d5400aa1336663f91dd302ff72fd7671
     restart: on-failure
     stop_grace_period: 1m
     init: true
