--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -2,8 +2,8 @@ manifestVersion: 1
 id: nolooking
 category: Lightning Node Management 
 name: nolooking
-version: "0.1.0-build-2"
-tagline: Use PayJoin to open channels for your lightning node
+version: "0.2.1-alpha"
+tagline: Open all your channels in one transaction
 description: >-
   Nolooking leverages Pay-to-Endpoint (payjoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
 
@@ -16,7 +16,11 @@ description: >-
 
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
-  - Allow access to /pj without Umbrel authentication
+  - Fetch quote and lease inbound lightning channel via payjoin output.
+  
+  - Automate anchor deposit field (removed). Use rustls.
+  
+  - New style with random colors to replace halloween theme.
 developer: nolooking
 website: https://nolooking.chaincase.app
 dependencies:
@@ -28,7 +32,7 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-path: "/pj"
+path: "/"
 defaultUsername: ""
 defaultPassword: ""
 submitter: nolooking
