Set gallery filenames

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -31,11 +31,10 @@ repo: https://github.com/lncapital/torq
 support: https://github.com/lncapital/torq/issues/new
 port: 7028
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
-  - 4.png
-  - 5.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
+  - 4.jpg
 releaseNotes: >-
   Support for arm architecture to run on Raspberry Pi
 path: ""
