Improve Torq app manifest

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -5,7 +5,11 @@ name: Torq
 version: "v0.11.1"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
-  Features
+  Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
+
+  With Torq, you can collect routing data and you analyze your data with increasingly advanced tools.
+  
+  Features:
   
   - Channel and Channel group inspection
   
@@ -23,7 +27,8 @@ description: >-
   
   - Fetch and analyse data from any point in time
   
-  - Navigate through time (days, weeks, months) to track your progress.developer: Shahana and Suheb
+  - Navigate through time (days, weeks, months) to track your progress
+developer: LN.capital
 website: https://github.com/lncapital/torq
 dependencies:
   - lightning
@@ -40,5 +45,5 @@ releaseNotes: >-
 path: ""
 defaultUsername: ""
 deterministicPassword: true
-submitter: Max Edwards
+submitter: LN.capital
 submission: https://github.com/getumbrel/umbrel-apps/pull/269
