--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -39,6 +39,8 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
+  From 1.18 to 1.18.5:
+
   - Add free.fr SMS notification (Thanks @CL0Pinette)
   
   - Add GoAlert Notification (Thanks @mhkarimi1383)
@@ -52,6 +54,7 @@ releaseNotes: >
   - Add new notification: Home Assistant notification (Thanks @rmtsrc)
   
   - Add label to status badge (Thanks @woooferz)
-  
+
+  Full changelog can be found here: https://github.com/louislam/uptime-kuma/releases
 submitter: Philipp Haussleiter
 submission: https://github.com/getumbrel/umbrel/pull/1148
