--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - NEXTCLOUD_ADMIN_USER=umbrel
       - NEXTCLOUD_ADMIN_PASSWORD=${APP_PASSWORD}
       - NEXTCLOUD_TRUSTED_DOMAINS=${APP_DOMAIN}:${APP_NEXTCLOUD_PORT} ${APP_HIDDEN_SERVICE} ${DEVICE_HOSTNAME}:${APP_NEXTCLOUD_PORT} ${APP_NEXTCLOUD_LOCAL_IPS}
+      - PHP_UPLOAD_LIMIT=1024G
     depends_on:
       - db
       - redis
