Change name and website

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -30,8 +30,8 @@ description: >-
   - Fetch and analyse data from any point in time
   
   - Navigate through time (days, weeks, months) to track your progress
-developer: LN.capital
-website: https://github.com/lncapital/torq
+developer: LN Capital
+website: https://ln.capital
 dependencies:
   - lightning
 repo: https://github.com/lncapital/torq
@@ -47,5 +47,5 @@ releaseNotes: >-
 path: ""
 defaultUsername: ""
 deterministicPassword: true
-submitter: LN.capital
+submitter: LN Capital
 submission: https://github.com/getumbrel/umbrel-apps/pull/269
