--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ride-the-lightning
 category: Lightning Node Management
 name: Ride The Lightning
-version: "0.13.1-beta"
+version: "0.13.2-beta"
 tagline: A powerful dashboard for the Lightning Network
 description: >-
   RTL is a full function, device agnostic, web user interface to help
@@ -40,14 +40,14 @@ gallery:
   - 2.jpg
   - 3.jpg
 releaseNotes: >-
-  - Events/day view for routing history report
+  - Generate Taproot address to receive Bitcoin on-chain
 
-  - Filtering non routing peers on routing page
+  - Option to generate & pay AMP invoice
 
-  - Invoice lookup feature
-
-  - Circular rebalance infographics
+  - User customizable grids enabling you to control, number of rows on the page, columns you want to view and default sorting order
   
+  - Setting to control opening of unannounced channels by default
+
   - Other bug fixes
 path: ""
 defaultUsername: ""
