remove community repo id

--- a/audiobookshelf/data/docker-compose.yml
+++ b/audiobookshelf/data/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: stacks-audiobookshelf_web_1
+      APP_HOST: audiobookshelf_web_1
       APP_PORT: 80
 
   web:
