--- a/bitcoin/umbrel-app.yml
+++ b/bitcoin/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: bitcoin
 category: Finance
 name: Bitcoin Node
-version: "23.0"
+version: "24.0"
 tagline: Run your personal node powered by Bitcoin Core
 description: >-
   Run your Bitcoin node and independently store and validate
@@ -36,27 +36,19 @@ defaultPassword: ""
 releaseNotes: >-
   - P2P and network changes
 
-  - Fee estimation changes
-
-  - Rescan startup parameter removed
-
-  - Tracepoints and Userspace, Statically Defined Tracing support
-
   - Updated RPCs
 
   - New RPCs
 
-  - File changes
+  - New RPCs
+  
+  - Updated REST APIs
+  
+  - New settings
+  
+  - Low-level changes
 
-  - Updated settings
-
-  - Tools and Utilities changes
-
-  - GUI changes
-
-  - Low-level changes (RPC and tests)
-
-  - Full details here: https://bitcoincore.org/en/releases/23.0/
+  - Full details here: https://github.com/bitcoin/bitcoin/blob/master/doc/release-notes/release-notes-24.0.md
 
   - Bugfix: Use specific Tor port for peers from Tor network
 submitter: Umbrel
