Tiny change to releaseNotes

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -44,13 +44,12 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
-
   - Multiple channels with the same peer now visible on the channels page
 
-  - User customizable grids enabling you to control, number of rows on the page, columns you want to view and default sorting order
+  - User customizable grids enabling you to control: number of rows on the page, columns you want to view and default sorting order
 
   - Setting to control opening of unannounced channels by default
   
-  - Other bug fixes
+  - Other bug fixes and usability fixes
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
