Update RTL (CLN) to v0.13.2 (#306)
Co-authored-by: Steven Briscoe <me@stevenbriscoe.com>

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: core-lightning-rtl
 category: Lightning Node Management
 name: Ride The Lightning (Core Lightning)
-version: "0.13.1-beta"
+version: "0.13.2-beta"
 tagline: Manage your Core Lightning node with RTL
 description: >-
   This version of RTL is specifically configured to use your Core Lightning node.
@@ -44,12 +44,12 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
-  - Liquidity Ads interface for viewing ads, researching nodes and buying channels
+  - Multiple channels with the same peer now visible on the channels page
 
-  - Liquidity Ads configuration to publish ads on the network
+  - User customizable grids enabling you to control: number of rows on the page, columns you want to view and default sorting order
 
-  - Regtest support
+  - Setting to control opening of unannounced channels by default
   
-  - Dashboard performance improvements
+  - Other bug fixes and usability fixes
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/7
