Tiny change to releaseNotes

--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -44,11 +44,11 @@ releaseNotes: >-
 
   - Option to generate & pay AMP invoice
 
-  - User customizable grids enabling you to control, number of rows on the page, columns you want to view and default sorting order
+  - User customizable grids enabling you to control: number of rows on the page, columns you want to view and default sorting order
   
   - Setting to control opening of unannounced channels by default
   
-  - Other bug fixes
+  - Other bug fixes and usability fixes
 path: ""
 defaultUsername: ""
 deterministicPassword: true
