--- a/nextcloud/umbrel-app.yml
+++ b/nextcloud/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: nextcloud
 category: Files
 name: Nextcloud
-version: "22.2.10"
+version: "22.2.10-build-2"
 tagline: Productivity platform that keeps you in control
 description: >-
   Nextcloud puts your data at your fingertips, under your control.
@@ -25,7 +25,7 @@ description: >-
 
   Note: After logging in to Nextcloud please change the password to something secure before sharing the address with anyone.
 releaseNotes: >-
-  - This release fixes a critical bug in Nextcloud.
+  - Increase upload limit to 1TB
 developer: Nextcloud GmbH
 website: https://nextcloud.com
 dependencies: []
