--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_BTCPAY_SERVER_IP
-      APP_PORT: $APP_BTCPAY_SERVER_PORT
+      APP_HOST: btcpay-server_web_1
+      APP_PORT: 3003
       PROXY_AUTH_ADD: "false"
 
   nbxplorer:
@@ -25,12 +25,9 @@ services:
       NBXPLORER_BTCNODEENDPOINT: $APP_BITCOIN_NODE_IP:$APP_BITCOIN_P2P_PORT
       NBXPLORER_BTCRPCUSER: $APP_BITCOIN_RPC_USER
       NBXPLORER_BTCRPCPASSWORD: $APP_BITCOIN_RPC_PASS
-      NBXPLORER_POSTGRES: User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Application Name=nbxplorer;MaxPoolSize=20;Database=nbxplorer$APP_BITCOIN_NETWORK
+      NBXPLORER_POSTGRES: User ID=postgres;Host=btcpay-server_postgres_1;Port=5432;Application Name=nbxplorer;MaxPoolSize=20;Database=nbxplorer$APP_BITCOIN_NETWORK
       NBXPLORER_AUTOMIGRATE: 1
       NBXPLORER_NOMIGRATEEVTS: 1
-    networks:
-      default:
-        ipv4_address: $APP_BTCPAY_SERVER_NBXPLORER_IP
 
   web:
     image: btcpayserver/btcpayserver:1.6.12@sha256:41768be32374ebc4f64050ad5e56ffef8834ccacbff0440c0938a493abcec252
@@ -48,17 +45,14 @@ services:
       BTCPAY_DATADIR: "/data"
       BTCPAY_PLUGINDIR: "/data/plugins"
       BTCPAY_DOCKERDEPLOYMENT: "false"
-      BTCPAY_POSTGRES: "User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Database=btcpayserver$APP_BITCOIN_NETWORK"
+      BTCPAY_POSTGRES: "User ID=postgres;Host=btcpay-server_postgres_1;Port=5432;Database=btcpayserver$APP_BITCOIN_NETWORK"
       BTCPAY_NETWORK: "$APP_BITCOIN_NETWORK"
-      BTCPAY_BIND: 0.0.0.0:$APP_BTCPAY_SERVER_PORT
+      BTCPAY_BIND: 0.0.0.0:3003
       BTCPAY_CHAINS: "btc"
-      BTCPAY_BTCEXPLORERURL: "http://$APP_BTCPAY_SERVER_NBXPLORER_IP:32838"
+      BTCPAY_BTCEXPLORERURL: "http://btcpay-server_nbxplorer_1:32838"
       BTCPAY_BTCLIGHTNING: "type=lnd-rest;server=https://$APP_LIGHTNING_NODE_IP:$APP_LIGHTNING_NODE_REST_PORT/;macaroonfilepath=/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon;allowinsecure=true"
       BTCPAY_SOCKSENDPOINT: $TOR_PROXY_IP:$TOR_PROXY_PORT
-      BTCPAY_EXPLORERPOSTGRES: User ID=postgres;Host=$APP_BTCPAY_SERVER_DB_IP;Port=5432;Application Name=nbxplorer;MaxPoolSize=20;Database=nbxplorer$APP_BITCOIN_NETWORK
-    networks:
-      default:
-        ipv4_address: $APP_BTCPAY_SERVER_IP
+      BTCPAY_EXPLORERPOSTGRES: User ID=postgres;Host=btcpay-server_postgres_1;Port=5432;Application Name=nbxplorer;MaxPoolSize=20;Database=nbxplorer$APP_BITCOIN_NETWORK
 
   postgres:
     image: btcpayserver/postgres:13.7@sha256:dadf0048895a888d88a2dd773dde2f5868c45f74ad37c6d208694df54b590531
@@ -72,6 +66,3 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - ${APP_DATA_DIR}/data/postgres:/var/lib/postgresql/data
-    networks:
-      default:
-        ipv4_address: $APP_BTCPAY_SERVER_DB_IP
