--- a/elements/torrc.template
+++ b/elements/torrc.template
@@ -1,7 +1,7 @@
 # elements rpc Hidden Service
 HiddenServiceDir /data/app-$APP_ID-rpc
-HiddenServicePort $APP_ELEMENTS_NODE_RPC_PORT $APP_ELEMENTS_NODE_IP:$APP_ELEMENTS_NODE_RPC_PORT
+HiddenServicePort $APP_ELEMENTS_NODE_RPC_PORT elements_node_1:$APP_ELEMENTS_NODE_RPC_PORT
 
 # elements p2p Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
-HiddenServicePort $APP_ELEMENTS_NODE_P2P_PORT $APP_ELEMENTS_NODE_IP:$APP_ELEMENTS_NODE_P2P_PORT
+HiddenServicePort $APP_ELEMENTS_NODE_P2P_PORT elements_node_1:$APP_ELEMENTS_NODE_P2P_PORT
