--- a/home-assistant/docker-compose.yml
+++ b/home-assistant/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_HOME_ASSISTANT_IP
+      APP_HOST: home-assistant_server_1
       APP_PORT: 8123
       PROXY_AUTH_ADD: "false"
 
@@ -12,6 +12,3 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/config
       - ${APP_DATA_DIR}/configuration.yaml:/config/configuration.yaml
-    networks:
-      default:
-        ipv4_address: $APP_HOME_ASSISTANT_IP
