--- a/itchysats/docker-compose.yml
+++ b/itchysats/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_ITCHYSATS_IP
+      APP_HOST: itchysats_web_1
       APP_PORT: 8000
 
   web:
@@ -19,7 +19,3 @@ services:
       - --electrum=tcp://$APP_ELECTRS_NODE_IP:$APP_ELECTRS_NODE_PORT
     environment:
       - ITCHYSATS_ENV=umbrel
-
-    networks:
-      default:
-        ipv4_address: $APP_ITCHYSATS_IP
