--- a/jam/docker-compose.yml
+++ b/jam/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_JAM_IP
+      APP_HOST: jam_web_1
       APP_PORT: 80
 
-  jam:
+  web:
     image: ghcr.io/joinmarket-webui/jam-standalone:v0.1.3-clientserver-v0.9.8@sha256:5cc26732bb3a868c454be8568cc425065b04b07eda63baad24a4d9c44971bb5c
     restart: on-failure
     stop_grace_period: 1m
@@ -25,6 +25,3 @@ services:
       jm_rpc_user: $APP_BITCOIN_RPC_USER
       jm_rpc_password: "${APP_BITCOIN_RPC_PASS}"
       jm_rpc_wallet_file: jam_default
-    networks:
-      default:
-        ipv4_address: $APP_JAM_IP
