--- a/kollider/docker-compose.yml
+++ b/kollider/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_KOLLIDER_IP
+      APP_HOST: kollider_web_1
       APP_PORT: 3000
   
   backend:
@@ -17,10 +17,7 @@ services:
       - ${APP_DATA_DIR}/data/logs:/app/logs
     environment:
       LND_IP: $APP_LIGHTNING_NODE_IP
-      LND_ZMQ_SUB_ADDRESS: "tcp://${APP_KOLLIDER_WS_IP}:5556"
-    networks:
-      default:
-        ipv4_address: $APP_KOLLIDER_HH_IP
+      LND_ZMQ_SUB_ADDRESS: "tcp://kollider_ws_1:5556"
   
   ws:
     image: kolliderhq/kollider-ws-client:v1.0.6@sha256:05f3d1ddf9949b377788e442a1050457559291a50510f5d6dfa66a28c283a80a
@@ -29,16 +26,13 @@ services:
     restart: on-failure
     stop_grace_period: 1m
     ports:
-      - "$APP_KOLLIDER_WS_PORT:8080"
+      - "4244:8080"
     environment:
       APP_PASSWORD: $APP_PASSWORD
       KOLLIDER_ZMQ_PUB_ADDRESS: "tcp://*:5556"
-      KOLLIDER_ZMQ_SUB_ADDRESS: "tcp://${APP_KOLLIDER_HH_IP}:5557"
-      KOLLIDER_ZMQ_HEDGER_ADDRESS: "tcp://${APP_KOLLIDER_HH_IP}:5558"
-      KOLLIDER_ZMQ_HEDGER_SUB_ADDRESS: "tcp://${APP_KOLLIDER_HH_IP}:5559"
-    networks:
-      default:
-        ipv4_address: $APP_KOLLIDER_WS_IP
+      KOLLIDER_ZMQ_SUB_ADDRESS: "tcp://kollider_backend_1:5557"
+      KOLLIDER_ZMQ_HEDGER_ADDRESS: "tcp://kollider_backend_1:5558"
+      KOLLIDER_ZMQ_HEDGER_SUB_ADDRESS: "tcp://kollider_backend_1:5559"
   
   web:
     image: kolliderhq/kollider-lite-app:v1.0.6@sha256:f5bbbea86ed4d03c9a7c66527edbcda05228986ba5721e65c08a885edb74151a
@@ -48,6 +42,3 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/cache/images:/app/.next/cache/images
-    networks:
-      default:
-        ipv4_address: $APP_KOLLIDER_IP
