--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -3,9 +3,10 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_LNBITS_IP
-      APP_PORT: $APP_LNBITS_PORT
+      APP_HOST: lnbits_web_1
+      APP_PORT: 3007
       PROXY_AUTH_ADD: "false"
+  
   web:
     image: lnbitsdocker/lnbits-legend:0.9.4@sha256:0dbcc5ad5c5d4439c4ee5148206ecd3fbc28422aec2847a3f17e968205dab68b
     init: true
@@ -17,7 +18,7 @@ services:
     environment:
       # Global
       LNBITS_HOST: "0.0.0.0"
-      LNBITS_PORT: "$APP_LNBITS_PORT"
+      LNBITS_PORT: 3007
       LNBITS_DATA_FOLDER: "/data"
 
       # LND
@@ -31,6 +32,3 @@ services:
       LNBITS_DEFAULT_WALLET_NAME: "LNbits wallet"
       LNBITS_DISABLED_EXTENSIONS: "amilk"
       LNBITS_ADMIN_EXTENSIONS: "ngrok"
-    networks:
-        default:
-          ipv4_address: $APP_LNBITS_IP
