--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_NEXTCLOUD_IP
+      APP_HOST: nextcloud_web_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
   
@@ -19,9 +19,6 @@ services:
       - MYSQL_PASSWORD=moneyprintergobrrr
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
-    networks:
-      default:
-        ipv4_address: $APP_NEXTCLOUD_DB_IP
 
   redis:
     image: redis:6.2.2-buster@sha256:e10f55f92478715698a2cef97c2bbdc48df2a05081edd884938903aa60df6396
@@ -29,9 +26,6 @@ services:
     restart: on-failure
     volumes:
       - "${APP_DATA_DIR}/data/redis:/data"
-    networks:
-      default:
-        ipv4_address: $APP_NEXTCLOUD_REDIS_IP
 
   web:
     image: nextcloud:22.2.10-apache@sha256:71c4fb75d7c035ea2c840ebc1adf0da144b0c69e39ce925f4a2ea84b7c06db18
@@ -42,8 +36,8 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/nextcloud:/var/www/html
     environment:
-      - MYSQL_HOST=${APP_NEXTCLOUD_DB_IP}
-      - REDIS_HOST=${APP_NEXTCLOUD_REDIS_IP}
+      - MYSQL_HOST=nextcloud_db_1
+      - REDIS_HOST=nextcloud_redis_1
       - MYSQL_PASSWORD=moneyprintergobrrr
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
@@ -54,9 +48,6 @@ services:
     depends_on:
       - db
       - redis
-    networks:
-      default:
-        ipv4_address: $APP_NEXTCLOUD_IP
 
   cron:
     image: nextcloud:22.2.10-apache@sha256:71c4fb75d7c035ea2c840ebc1adf0da144b0c69e39ce925f4a2ea84b7c06db18
@@ -70,6 +61,3 @@ services:
     depends_on:
       - db
       - redis
-    networks:
-      default:
-        ipv4_address: $APP_NEXTCLOUD_CRON_IP
