--- a/robosats/docker-compose.yml
+++ b/robosats/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: ${APP_ROBOSATS_IP}
-      APP_PORT: ${APP_ROBOSATS_PORT}
+      APP_HOST: robosats_web_1
+      APP_PORT: 12596
 
   web:
     image: recksato/robosats-client:v0.3.1-alpha@sha256:5056f6905a4f93c319def72a89bf05f33443f4c4b5f4dcd1232331996335cf9e
@@ -15,6 +15,3 @@ services:
       TOR_PROXY_IP: ${TOR_PROXY_IP}
       TOR_PROXY_PORT: ${TOR_PROXY_PORT}
       ROBOSATS_ONION: robosats6tkf3eva7x2voqso3a5wcorsnw34jveyxfqi2fu7oyheasid.onion
-    networks:
-      default:
-        ipv4_address: ${APP_ROBOSATS_IP}
