--- a/squeaknode/docker-compose.yml
+++ b/squeaknode/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_SQUEAKNODE_IP
+      APP_HOST: squeaknode_web_1
       APP_PORT: $APP_SQUEAKNODE_PORT
 
   web:
@@ -46,9 +46,6 @@ services:
       SQUEAKNODE_SERVER_EXTERNAL_ADDRESS: $APP_SQUEAKNODE_P2P_HIDDEN_SERVICE
 
       DEBUG: "squeaknode:*"
-    networks:
-      default:
-        ipv4_address: $APP_SQUEAKNODE_IP
 
   tor:
     image: getumbrel/tor:0.4.7.8@sha256:2ace83f22501f58857fa9b403009f595137fa2e7986c4fda79d82a8119072b6a
