--- a/squeaknode/torrc.template
+++ b/squeaknode/torrc.template
@@ -1,4 +1,4 @@
 # squeaknode p2p Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
-HiddenServicePort $APP_SQUEAKNODE_P2P_PORT $APP_SQUEAKNODE_IP:$APP_SQUEAKNODE_P2P_PORT
-HiddenServicePort $APP_SQUEAKNODE_P2P_TESTNET_PORT $APP_SQUEAKNODE_IP:$APP_SQUEAKNODE_P2P_TESTNET_PORT
+HiddenServicePort $APP_SQUEAKNODE_P2P_PORT squeaknode_web_1:$APP_SQUEAKNODE_P2P_PORT
+HiddenServicePort $APP_SQUEAKNODE_P2P_TESTNET_PORT squeaknode_web_1:$APP_SQUEAKNODE_P2P_TESTNET_PORT
