--- a/suredbits-wallet/torrc.template
+++ b/suredbits-wallet/torrc.template
@@ -1,3 +1,3 @@
 # suredbits-wallet p2p Hidden Service
 HiddenServiceDir /data/app-$APP_ID-p2p
-HiddenServicePort $APP_SUREDBITS_WALLET_P2P_PORT $APP_SUREDBITS_WALLET_SERVER_IP:$APP_SUREDBITS_WALLET_P2P_PORT
+HiddenServicePort $APP_SUREDBITS_WALLET_P2P_PORT suredbits-wallet_walletserver_1:$APP_SUREDBITS_WALLET_P2P_PORT
