--- a/whoogle-search/docker-compose.yml
+++ b/whoogle-search/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_WHOOGLE_SEARCH_IP
-      APP_PORT: $APP_WHOOGLE_SEARCH_PORT
+      APP_HOST: whoogle-search_web_1
+      APP_PORT: 6420
 
   web:
     image: benbusby/whoogle-search:0.7.4@sha256:8526a3272d992ea2c240919b8b5dafee2b37eab28af7df4f175054ef29d8b65d
@@ -13,7 +13,4 @@ services:
     init: true
     user: "927:927"
     environment:
-      EXPOSE_PORT: $APP_WHOOGLE_SEARCH_PORT
-    networks:
-      default:
-        ipv4_address: $APP_WHOOGLE_SEARCH_IP
+      EXPOSE_PORT: 6420
