--- a/lndboss/umbrel-app.yml
+++ b/lndboss/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lndboss
 category: Lightning Node Management
 name: LndBoss
-version: "2.9.2"
+version: "2.12.0"
 tagline: A GUI for BalanceOfSatoshis
 description: LndBoss is a GUI for BalanceOfSatoshis.
   It is a tool that makes it easy to run your favorite
@@ -25,6 +25,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
+  - 2.12.0 (2022-11-28)
+    Added allow flag to create-channel-group command to determine order and allow list for joining group.
+
+  - 2.11.0 (2022-11-18)
+    Added avoid-high-fee-routes to rebalance to ignore route above max-fee-rate.
+
+  - 2.10.0 (2022-11-08)
+    Added a simple table on dashboard page that shows pending payments and channels.
+
   - 2.9.2 (2022-10-26)
     (Important Bug Fix): Fix batch open command where opens are failing with amount parsing
     and wrong rows getting dropped.
@@ -50,21 +59,5 @@ releaseNotes: >
     Added filter variable BLOCKS_SINCE_LAST_CHANNEL in peers command.
     Added support for tags in bos forwards command.
     Bumps several dependencies.
-
-  - 2.4.0 (2022-10-04)
-    Added support for scheduling automated fee/channel policies based on conditions.
-    Fixed tags command client page.
-    Fixed error messages on dashboard page.
-
-  - 2.3.0 (2022-09-23)
-    Added support for bos fees command
-    Bump dependencies
-
-  - 2.2.0 (2022-09-19)
-    Added for and query flags for chart-payments-received command
-    Change password validation requirements to only support length of 10 characters
-
-  - 2.1.0 (2022-09-16)
-    Support for bos open command for batch open and zero conf channels
 submitter: Nitesh Balusu
 submission: https://github.com/getumbrel/umbrel-apps/pull/65
