Updating docker images
Updating docker images to latest.

--- a/gitea/docker-compose.yml
+++ b/gitea/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: gitea/gitea:1.16.8-rootless@sha256:8a6ad22694c76122ae075af1153a544577724c45cb45af44963aa78dc179cc46
+    image: gitea/gitea:latest
     user: "1000:1000"
     restart: on-failure
     ports:
@@ -34,7 +34,7 @@ services:
         ipv4_address: $APP_GITEA_IP
 
   db:
-    image: mariadb:10.5.12@sha256:dfcba5641bdbfd7cbf5b07eeed707e6a3672f46823695a0d3aba2e49bbd9b1dd
+    image: mariadb:latest
     user: "1000:1000"
     restart: on-failure
     volumes:
