--- a/invidious/umbrel-app.yml
+++ b/invidious/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: invidious
 category: Social
 name: Invidious
-version: "2022.09.08-53fb6ad"
+version: "2022.12.02-5160d8b"
 tagline: Browse YouTube without tracking or ads
 description: >-
   An open source alternative front-end to YouTube
@@ -47,5 +47,13 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
+releaseNotes: >-
+  - QUIC Hotfix
+
+  - Custom Playlists
+
+  - New RPCs
+  
+  - Turkish, Chinese, and Japanese translations
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/129
