--- a/gitea/docker-compose.yml
+++ b/gitea/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   server:
-    image: gitea/gitea:latest
+    image: gitea/gitea:1.17.3
     user: "1000:1000"
     restart: on-failure
     ports:
