--- a/gitea/docker-compose.yml
+++ b/gitea/docker-compose.yml
@@ -34,7 +34,7 @@ services:
         ipv4_address: $APP_GITEA_IP
 
   db:
-    image: mariadb:latest
+    image: mariadb:10.9.4
     user: "1000:1000"
     restart: on-failure
     volumes:
