ride-the-lightning

--- a/ride-the-lightning/docker-compose.yml
+++ b/ride-the-lightning/docker-compose.yml
@@ -48,5 +48,5 @@ services:
       - --lnd.host="$APP_LIGHTNING_NODE_IP"
       - --lnd.macaroon="/lnd/data/chain/bitcoin/$APP_BITCOIN_NETWORK/admin.macaroon"
       - --lnd.certificate="/lnd/tls.cert"
-      - --rpc.rest.host="ride-the-lightning_boltz_1"
+      - --rpc.rest.host="0.0.0.0"
       - --rpc.rest.port="9003"
