--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: Lightning Node Management
 name: Lightning Terminal
-version: "0.8.3-alpha"
+version: "0.8.5-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -51,6 +51,7 @@ defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
   This release of Lightning Terminal (LiT) updates the packaged 
-  version of LND to v0.15.4-beta.
+  version of LND to v0.15.5-beta, Faraday to v0.2.9-alpha, Loop 
+  to v0.20.2-beta and Pool to v0.6.1-beta.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
