Update nolooking to v0.2.2-alpha

--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: nolooking
 category: Lightning Node Management 
 name: nolooking
-version: "0.2.1-alpha"
+version: "0.2.2-alpha"
 tagline: Open all your channels in one transaction
 description: >-
   Nolooking leverages Pay-to-Endpoint (payjoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
@@ -16,11 +16,9 @@ description: >-
 
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
 releaseNotes: >-
-  - Fetch quote and lease inbound lightning channel via payjoin output.
-  
-  - Automate anchor deposit field (removed). Use rustls.
-  
-  - New style with random colors to replace halloween theme.
+  - Recommend outbound nodes to open channels with.
+
+  - Display payjoin errors in app.
 developer: nolooking
 website: https://nolooking.chaincase.app
 dependencies:
