Patch up releaseNotes

--- a/whoogle-search/umbrel-app.yml
+++ b/whoogle-search/umbrel-app.yml
@@ -67,33 +67,49 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-releaseNotes: >-
-   Complete overhaul of session management
-    - Fixed runaway session file creation for public instance maintainers
-    - Fixed failure to decrypt subsequent result page queries (i.e. page 2 query appearing as "gAAAAA....")
+releaseNotes: >
+  Complete overhaul of session management
 
-   Added ability to navigate through results with Tab and Shift+Tab
+  - Fixed runaway session file creation for public instance maintainers
 
-   Added an "Advanced Search" toggle in search results for quickly switching between countries
-    - Can be updated to support other search params, if requested
+  - Fixed failure to decrypt subsequent result page queries (i.e. page 2 query appearing as "gAAAAA....")
 
-   Updated filter for sponsored results/advertising content
   
-   Configured language + country is now included in search suggestion requests
+  Added ability to navigate through results with Tab and Shift+Tab
+
   
-   Fixed issues with bolding search terms in result pages
+  Added an "Advanced Search" toggle in search results for quickly switching between countries
+
+  - Can be updated to support other search params, if requested
+
   
-   Added ability to encode configuration in the URL
-    
-   Allows jumping between Whoogle instances (via Farside, for example) and maintaining the same configuration settings
+  Updated filter for sponsored results/advertising content
+
   
-   Fixed issues with result links to Google domains
+  Configured language + country is now included in search suggestion requests
+
   
-   Reduced the amount of logging the Tor service outputs by default
+  Fixed issues with bolding search terms in result pages
+
   
-   New translations:
-    - Thai
-    - Kurdish
-    - Welsh
+  Added ability to encode configuration in the URL
+
+  
+  Allows jumping between Whoogle instances (via Farside, for example) and maintaining the same configuration settings
+
+  
+  Fixed issues with result links to Google domains
+
+  
+  Reduced the amount of logging the Tor service outputs by default
+
+  
+  New translations:
+
+  - Thai
+
+  - Kurdish
+
+  - Welsh
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/117
