--- a/speedtest-tracker/umbrel-app.yml
+++ b/speedtest-tracker/umbrel-app.yml
@@ -1,11 +1,14 @@
 manifestVersion: 1
-id: speedtest
+id: speedtest-tracker
 category: Development
 name: SpeedTest
-version: "1"
-tagline: Automatically run a speedtest every hour
+version: "1.12.2"
+tagline: Automatically run an Internet speedtest every hour
 description: >-
-  This program runs a speedtest check every hour and graphs the results. The back-end is written in Laravel and the front-end uses React. It uses Ookla's Speedtest cli to get the data and uses Chart.js to plot the results.
+  This program runs a speedtest check every hour and graphs the results.
+
+
+  It uses Ookla's Speedtest cli to get the Internet speedtest data.
 
 
   Features:
@@ -35,7 +38,7 @@ website: https://github.com/henrywhitaker3/Speedtest-Tracker
 dependencies: []
 repo: https://github.com/henrywhitaker3/Speedtest-Tracker
 support: https://github.com/henrywhitaker3/Speedtest-Tracker
-port: 2541
+port: 8765
 gallery:
   - 1.jpg
   - 2.jpg
