revert library path to system root for easy find on setup

--- a/audiobookshelf/docker-compose.yml
+++ b/audiobookshelf/docker-compose.yml
@@ -22,6 +22,6 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/config:/home/node/config
       - ${APP_DATA_DIR}/data/metadata:/home/node/metadata
-      - ${UMBREL_ROOT}/data/storage/downloads/audiobooks:/home/node/audiobooks
-      - ${UMBREL_ROOT}/data/storage/downloads/podcasts:/home/node/podcasts
+      - ${UMBREL_ROOT}/data/storage/downloads/audiobooks:/audiobooks
+      - ${UMBREL_ROOT}/data/storage/downloads/podcasts:/podcasts
 
