Update Specter Desktop to v1.14.1

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: Finance
 name: Specter Desktop
-version: "1.13.1"
+version: "1.14.1"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,15 +44,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - Bugfix: Hover effect in balance display #1904 (Manolis Mandrapilias)
+  - Feature: SPECTRUM (Experimental Electrum support in Specter)
 
-  - Bugfix: Remove black empty bar in tx-table after search #1912 (relativisticelectron)
+  - Bugfix: Adding migrations to the hidden imports #2007 (k9ert)
 
-  - Bugfix: Upgrade hwi to 2.1.1 to fix #1840 #1909 (k9ert)
+  - Bugfix: Bump Spectrum for better error_handling (k9ert)
 
-  - Privacy: Disabeling spellcheck to avoid any leakage to 3rd party servers #1892 (relativisticelectron)
+  - Chore: better error_handling and tested #2005 (k9ert)
 
-  - UIUX: Clearer unconfirmed transaction icons #1899 (relativisticelectron)
+  - Docs: Release guide update #2004 (Manolis Mandrapilias)
 
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
