--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -46,13 +46,31 @@ defaultPassword: ""
 releaseNotes: >-
   - Feature: SPECTRUM (Experimental Electrum support in Specter)
 
+  - Feature: Spectrum addition #1952 (k9ert)
+
+  - Feature: Several things for Spectrum preparation #1913 (k9ert)
+
+  - Feature: QR support for Jade #1964 (Manolis Mandrapilias)
+
+  - Feature: Add taproot psbt fields #1837 (kdmukai)
+
+  - Feature: QR message signing for SeedSigner #1938 (kdmukai)
+
+  - Feature: Implement JWT authentication in REST API #1785 (Ankur)
+
+  - Feature: Deactivate hot wallets for Spectrum #1999 (Manolis Mandrapilias)
+
+  - Feature: Extensions can add new devices #1887 (k9ert)
+
+  - Feature: `--devstatus-threshold` for cli_server #1945 (k9ert)
+
+  - Security: CVE-2007-4559 Patch #1927 (TrellixVulnTeam)
+  
   - Bugfix: Adding migrations to the hidden imports #2007 (k9ert)
 
   - Bugfix: Bump Spectrum for better error_handling (k9ert)
-
-  - Chore: better error_handling and tested #2005 (k9ert)
-
-  - Docs: Release guide update #2004 (Manolis Mandrapilias)
+  
+  - Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.1
 
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
