--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -68,7 +68,7 @@ releaseNotes: >-
 
   - Bugfix: Bump Spectrum for better error_handling (k9ert)
   
-  - Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.1
+  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.1
 
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
