--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: Networking
 name: Tailscale
-version: "v1.34"
+version: "v1.34.0"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,6 +28,16 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  - Various bug fixes
+  - A new (third) 4via6 DNS form: 192-168-1-2-via-8 or 192-168-1-2-via-8.foo-bar.ts.net.
+  
+  - Display decoded punycode hostnames in status list
+  
+  - Add tailscale set CLI to modify one configuration setting without needing to repeat the rest
+  
+  - Warn in tailscale status health and tailscale up if there are nodes advertising routes but --accept-routes=false
+  
+  - Add Fast User Switching using tailscale login and tailscale switch
+  
+  - Warn in tailscale status health if something else overwrites /etc/resolv.conf
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
