--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -2,21 +2,13 @@ manifestVersion: 1
 id: passky-server
 category: Password Managers
 name: Passky Server
-version: "v7.1.0"
+version: "v8.0.2"
 tagline: Simple, modern, lightweight, open source and secure password manager.
 description: >-
-  Passky is one of the easiest password manager to use.
-  On Passky's main page you can see all your saved passwords,
-  can search for specific ones, edit them and copy information with just one click.
-
-
-  Unlike some other password managers, we do care about security,
-  that's why users can use both, Software and Hardware two-factor authentication for completely free.
-
-
-  Passky allows you to import passwords from all other major password managers in just a couple of seconds.
-  Not only that, but Passky can also export your passwords to different password managers,
-  so you can switch from Passky to any other password manager without any problems.
+  With Passky, you can easily and securely store all of your passwords in one place.
+  Say goodbye to the hassle of remembering multiple complex passwords - with Passky, all you need is one master password to access all of your accounts.
+  Passky uses advanced encryption technology to keep your passwords safe and secure, so you can have peace of mind knowing that your sensitive information is protected.
+  Plus, Passky is easy to use and available on all of your devices, so you can access your passwords wherever you go. Try Passky today and take control of your online security!
 developer: Rabbit Company LLC
 website: https://passky.org
 dependencies: []
