Update Jam to v0.1.4

--- a/jam/umbrel-app.yml
+++ b/jam/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: jam
 category: Finance
 name: Jam
-version: "0.1.3"
+version: "0.1.4"
 tagline: Your sats. Your privacy. Your profit.
 description: >-
   Jam is a user-interface for JoinMarket with focus on
@@ -13,11 +13,11 @@ description: >-
 
   The app provides sensible defaults and is easy to use for beginners while still providing the features advanced users expect.
 releaseNotes: >-
-  - Quickly review/adapt fee settings before sweeping
+  - Speed up initial page load
 
-  - Improved readability of Orderbook
+  - Ability to spend (expired) fidelity bond
 
-  - Wait for bitcoind to accept RPC calls
+  - Improved settings page with subsections
 developer: JoinMarket WebUI Organisation
 website: https://jamapp.org
 dependencies:
