--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.11.1"
+version: "v0.15.2"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -10,25 +10,25 @@ description: >-
 
   With Torq, you can collect routing data and you analyze your data with increasingly advanced tools.
 
-  
+
   Features:
-  
+
   - Channel and Channel group inspection
-  
+
   - See the channel balance (inbound/outbound capacity) over time
-  
+
   - Advanced charts and visualizations of aggregated forwarding statistics
-  
+
   - Visualization of sources and destinations for traffic
-  
+
   - Stores all events from your node including HTLC events, fee rate changes and channel enable/disable events
-  
+
   - Filter, sort and group data
-  
+
   - Store custom table views configurations for quickly finding the right information
-  
+
   - Fetch and analyse data from any point in time
-  
+
   - Navigate through time (days, weeks, months) to track your progress
 developer: LN Capital
 website: https://ln.capital
@@ -43,7 +43,7 @@ gallery:
   - 3.jpg
   - 4.jpg
 releaseNotes: >-
-  Support for arm architecture to run on Raspberry Pi
+  This release contains fixes to the data collection logic as well as showing web ui while Torq is bootstrapping.
 path: ""
 defaultUsername: ""
 deterministicPassword: true
