--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: firefox
-category: Browser
+category: Networking
 name: Firefox Web Browser
 version: "101.0.1"
 tagline: Firefox is a free and open-source web browser
@@ -9,7 +9,6 @@ description: >-
 
 
   No shady privacy policies or back doors for advertisers. Just a lightning fast browser that does not sell you out.
-
 
 
   Get all the speed and tools with none of the invasions of privacy. Firefox Browser collects so little data about you, we do not even require your email address to download. That is because unlike other browsers, we have no financial stake in following you around the web.
@@ -25,9 +24,6 @@ description: >-
 
 
   Take your privacy with you everywhere. Firefox Browsers for iOS and Android have the same strong privacy settings to block trackers from following you around the web, no matter where you are.
-
-
-
 developer: Mozilla Foundation
 website: https://www.mozilla.org/en-US/firefox/
 dependencies: []
