--- a/firefox/docker-compose.yml
+++ b/firefox/docker-compose.yml
@@ -4,11 +4,10 @@ services:
 
   app_proxy:
     environment:
-      APP_HOST: firefox
+      APP_HOST: firefox_server_1
       APP_PORT: 3000
 
   server:
-    container_name: firefox
     image: linuxserver/firefox:101.0.1@sha256:04124c6961be68a869f95cfccd509d3a63be157a59a5407f9eaa39dbf19b34a6
     restart: on-failure
     environment:
