Change name to Firefox

--- a/firefox/umbrel-app.yml
+++ b/firefox/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: firefox
 category: Networking
-name: Firefox Web Browser
+name: Firefox
 version: "101.0.1"
 tagline: Firefox is a free and open-source web browser
 description: >-
