--- a/wikijs/docker-compose.yml
+++ b/wikijs/docker-compose.yml
@@ -3,13 +3,12 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: wikijs
+      APP_HOST: wikijs_server_1
       APP_PORT: 3000
+  
   server:
-    container_name: wikijs
-    image: linuxserver/wikijs:2.5.290@sha256:407bf312e4414467214c274ea86ce424656b5671237954436c69e5749614dac6
+    image: linuxserver/wikijs:2.5.294@sha256:e9f79a619fb0da03dc2e20d1543a02eb655f09a1a112c6998ebd584ada533d66
     restart: on-failure
-
     environment:
       - PUID=1000
       - PGID=1000
