--- a/wikijs/umbrel-app.yml
+++ b/wikijs/umbrel-app.yml
@@ -14,17 +14,12 @@ description: >-
   It's not just about being free, it also means anyone can contribute new features and help squash bugs. Wiki.js is proudly licensed under AGPLv3.
 
 
-  Connect your wiki with an ever-expanding list of external integrations
-  for authentication, logging, rendering, search and storage.
-
-
-  
-
-developer: WikiJS Team
+  Connect your wiki with an ever-expanding list of external integrations for authentication, logging, rendering, search and storage.
+developer: Requarks
 website: https://js.wiki/
 dependencies: []
-repo: https://github.com/Requarks/wiki
-support: https://github.com/Requarks/wiki
+repo: https://github.com/requarks/wiki
+support: https://js.wiki/support
 port: 9182
 gallery:
   - 1.jpg
@@ -34,6 +29,5 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
-permissions:
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/273
