--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -3,18 +3,14 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: $APP_N8N_IP
-      APP_PORT: $APP_N8N_PORT
+      APP_HOST: n8n_server_1
+      APP_PORT: 5678
 
   server:
-    container_name: n8n
-    image: n8nio/n8n:0.202.1@sha256:5241a77b9b3e9b484387eefc37c8ec4750364e76a072b9adc3711473758ce605
+    image: n8nio/n8n:0.207.1@sha256:a4702a77217b449723a98030e3c47a0267c0ceee97a8684184fdfebec0712b5f
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/home/node/.n8n
     stop_grace_period: 1m
-    environment:
-      - WEBHOOK_URL=http://$APP_N8N_IP:$APP_N8N_PORT
-      - EXECUTIONS_PROCESS=main
 
 
