--- a/n8n/umbrel-app.yml
+++ b/n8n/umbrel-app.yml
@@ -2,10 +2,12 @@ manifestVersion: 1
 id: n8n
 category: Automation
 name: n8n
-version: "0.202.1"
+version: "0.207.1"
 tagline: Automate Workflow without limits
 description: >-
-  n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, be available to self-host, and allow you to add your own custom functions, logic and apps. n8n's node-based approach makes it highly versatile, enabling you to connect anything to everything.
+  n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, 
+  be available to self-host, and allow you to add your own custom functions, logic and apps. 
+  n8n's node-based approach makes it highly versatile, enabling you to connect anything to everything.
 
 
   n8n (pronounced n-eight-n) helps you to connect any app with an API with any other, and manipulate its data with little or no code.
@@ -18,8 +20,8 @@ description: >-
   
   
   Privacy-focused- self-host n8n for privacy and security.
-developer: n8n-io
-website: https://n8n.io/
+developer: n8n
+website: https://n8n.io
 dependencies: []
 repo: https://github.com/n8n-io/n8n
 support: https://docs.n8n.io/
@@ -32,4 +34,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: Pranshu Agrawal
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/283
