--- a/n8n/umbrel-app.yml
+++ b/n8n/umbrel-app.yml
@@ -3,7 +3,7 @@ id: n8n
 category: Automation
 name: n8n
 version: "0.207.1"
-tagline: Automate Workflow without limits
+tagline: Build complex workflows, really fast
 description: >-
   n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, 
   be available to self-host, and allow you to add your own custom functions, logic and apps. 
@@ -13,13 +13,13 @@ description: >-
   n8n (pronounced n-eight-n) helps you to connect any app with an API with any other, and manipulate its data with little or no code.
 
 
-  Customizable- highly flexible workflows and the option to build custom nodes.
+  Customizable: highly flexible workflows and the option to build custom nodes.
 
   
-  Convenient- use the Desktop app or npm to try out n8n, or the Cloud hosting option if you want us to handle the infrastructure.
+  Convenient: use the Desktop app or npm to try out n8n, or the Cloud hosting option if you want us to handle the infrastructure.
   
   
-  Privacy-focused- self-host n8n for privacy and security.
+  Privacy-focused: self-host n8n for privacy and security.
 developer: n8n
 website: https://n8n.io
 dependencies: []
