--- a/n8n/docker-compose.yml
+++ b/n8n/docker-compose.yml
@@ -12,5 +12,6 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data:/home/node/.n8n
     stop_grace_period: 1m
-
-
+    environment:
+      # Used to set the url for editor, REST API & webhooks
+      - N8N_HOST=$DEVICE_DOMAIN_NAME
